# document_intelligence_pipeline

./: .env.example  .gitignore  ANALYSIS_TECHNICAL_VS_INVOICE_EXTRACTION.md  IMPLEMENTATION_CHECKLIST_UNIVERSAL_SCHEMA.md  README.md  cli.py  complex_table_schema.json  environment.yml  pyproject.toml  requirements.txt  run_pipeline.py  run_v3.py
analysis/: __init__.py  document_analyzer.py  semantic_grouper.py
chunker/: __init__.py  graph_builder.py
common/: model_registry.py  types.py  utils.py  vlm_client.py  vlm_types.py
config/: __init__.py  models.yaml  pipeline_config.py
converter/: __init__.py  engine.py
core/: __init__.py  doc_manifest.py  schemas.py
evaluation/: extract_assets.py  generate_masking_demo.py  visualize_hkg.py
extractor/: __init__.py  agent.py  discovery_agent.py  evaluation.py  normalizer.py  schema_definitions.py  schema_engine.py  schema_registry.py
models/: __init__.py  layout_detector.py  layoutlm_classifier.py  ocr_engine.py  table_structure_model.py
modules/: __init__.py  layout_detector.py  layoutlm_classifier.py  ocr_engine.py  table_structure_model.py  vlm_client.py
pipeline/: __init__.py  coordinate_converter.py  enhanced_pipeline.py  page_processor.py  region_cleaner.py  result_builder.py  visualization_manager.py
processors/: __init__.py  figure_caption_processor.py  font_analyzer.py  layout_chunker.py  layout_refiner.py  page_processor.py  reading_order.py  reading_order_planner.py  reading_order_referee.py  region_merger.py  region_processor.py  stylesheet_planner.py  table_anchor_associator.py  table_extractor.py
renderers/: markdown_renderer.py
research/: README_HF.md  __init__.py  batch_distill.py  distillation_agent.py  train_student.py  verify_data.py
scripts/: bootstrap.py  eval_harness.py  eval_specialist_vs_teacher.py  generate_ground_truth.py  (+2 more)
(+64 files in other folders)
