# Package metadata only. Runtime dependencies are pinned in environment.yml
# (the single source of truth for reproducibility).
#
# To install this project as an editable package after creating the env:
#   pip install -e .

[project]
name = "document_intelligence_pipeline"
version = "3.0.0"
description = "Schema-conditioned document extraction pipeline with hierarchical knowledge graph and dynamic Pydantic schema synthesis."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Rohan Munshi" },
]
license = { text = "MIT" }

# Runtime deps are NOT declared here — see environment.yml for pinned versions.
dependencies = []

[project.urls]
Homepage = "https://github.com/munshi007/document_intelligence_pipeline"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "chunker",
    "common",
    "config",
    "converter",
    "core",
    "extractor",
    "modules",
    "pipeline",
    "processors",
    "renderers",
    "storage",
    "utils",
]
